# monday-django-list

./: db.sqlite3  pyproject.toml
backend/: db.sqlite3  manage.py
backend/core/: admin.py  models.py  serializers.py  views.py
backend/core/migrations/: 0002_alter_tarefas_fim_alter_tarefas_grupo.py  0003_remove_grupos_integrante2_remove_grupos_integrante3_and_more.py  0006_remove_tarefas_grupo_remove_tarefas_lider.py  0007_alter_grupos_integrante1.py  0008_remove_grupos_integrante1_remove_grupos_nomegp_and_more.py  0009_rename_ultima_grupos_criado_rename_fim_tarefas_prazo_and_more.py  0011_rename_prazo_tarefas_entregue_tarefas_prazofinal.py  0012_topic_tarefas_lider.py  0015_remove_topic_tarefas_conjtopic.py  0016_creategp_alter_grupos_nome_and_more.py  0020_tarefas_foto.py  0021_chats.py
backend/dolist/: asgi.py  urls.py
core/: admin.py  models.py  serializers.py  views.py
core/migrations/: 0001_initial.py  0004_alter_tarefas_lider.py  0005_alter_tarefas_lider.py  0010_alter_tarefas_datainicio.py  0013_topic_tarefas.py  0014_remove_topic_tarefas_topic_tarefas.py  0017_remove_grupos_nome_grupos_nome.py  0018_rename_nome_grupos_gp.py  0019_alter_grupos_participantes_alter_tarefas_lider.py
dolist/: settings.py  urls.py  wsgi.py
frontend/: package-lock.json  package.json
frontend/src/: App.vue  main.js
frontend/src/components/: CalendarDate.vue  CalendarMonth.vue  CalendarWeek.vue  cards.vue  chats.vue
frontend/src/components.d/: CalendarMonthHeader.vue  CalendarTask.vue  cards.vue  notificationcomp.vue
frontend/src/plugins/: axios.js
(+16 files in other folders)
